--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scroll-y-hidden {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+  }
+
+  .scroll-y-hidden::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+}
