--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,4 +12,8 @@
   .scroll-y-hidden::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
   }
+
+  .selected-tab {
+    @apply border-trello-blue-100 border-current
+  }
 }
