WIP Implemented prototype solution into app

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,7 +31,8 @@
     overflow-wrap: break-word;
   }
 
-  .test {
-    height: 70vh;
+  .list-height {
+    height: min-content;
+    max-height: 65%;
   }
 }
