--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,9 +27,9 @@
     @apply border-trello-blue-100 border-current;
   }
 
-  .list-height {
-    height: min-content;
-    max-height: 85%;
+  .lists-wrapper {
+    height: 100%;
+    max-height: 100%;
   }
 
   .list-wrapper {
